grafana/grafana-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    version: 1.0.0
  creationTimestamp: null
  labels:
    io.service: cb-grafana
  name: cb-grafana
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.service: cb-grafana
status:
  loadBalancer: {}
